Realizou a lógica de cadastro de usuário fisico ou juridico
